# reachy-mini-demo

./: .env.example  .gitignore  CALIBRATION.md  CLAUDE.md  PROJECT_STATE.md  README.md  pyproject.toml  start_daemon.sh  start_mac.sh  start_xiaoyi.ps1  todo.md
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md
_experiments/: play01_hand_track.py  vis01_face_track.py
audio/: _body_yaw_test.py  _doa_diag.py  _doa_frame_test.py  _doa_sample.py  doa01_test.py  sound_turn.py
docs/: DOA_SEEK_DRAFT.md  FEATURE_INVENTORY.md  GAZE_AWARE_INTERACTION_PLAN.md  KWS_RESEARCH.md  MULTI_PERSON_INTRO_PLAN.md  WAKEWORD_PRIORITY_ANALYSIS.md  changelog_2026-06-16_17.md
identity/: identity_store.py  owner.py  recognizer.py
memory/: manager.py  safety.py
perception/: asd.py  face_config.py  face_pipeline.py  face_tracker.py  fusion.py  gaze.py  gaze_behavior.py  vision_worker.py
scripts/: ISSUE_DRAFT_daemon_116.md  _no_release_test.py  benchmark_gaze.py  daemon_up.py  gaze_eval.py  recapture_face.py
tests/: README.md  _vision_capture_fixtures.py  _vision_model_test.py  face_backend_compare.py  run_vision_test.sh  test_asr.py  test_asr_dashscope.py  test_cascaded_pipeline.py  test_conversation.py  test_facereid_port.py  test_identity.py  test_memory.py  test_pipeline.py  test_tts.py  test_turn_detector.py  test_vad.py
tools/: __init__.py  _daemon_crash_repro.py  base.py  daemon_up.py  memory.py  motion.py  recapture_face.py  registry.py  session.py  wake01_kws_standalone.py
vision/: _play01_ghost_diag.py
voice/: ARCHITECTURE.md  _judge_unit.py  actions.py  (+10 more)
(+36 files in other folders)
